# leftwm

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  bar.sh  bootloop.sh  flake.nix  leftwm.desktop  lemonbar_hack.sh  localtime.txt  manager.rs  possibility.patch.txt  rust-toolchain.toml  sweep.timestamp  x_in_window.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_enhancement.yml  feature_request.yml
.github/workflows/: check-msrv.yml  ci.yml  codeberg-mirror.yml  discussions-qa.yml  docs.yml  new-issues.yml  release.yml  run-build.yml  run-tests.yml
.nixos-vm/: configuration.nix  vm.sh
display-servers/smithay-display-server/: Cargo.toml
display-servers/smithay-display-server/resources/: border.frag
display-servers/smithay-display-server/src/: cursor.rs  drawing.rs  event_channel.rs  handlers.rs  input_handler.rs  internal_action.rs  leftwm_config.rs  lib.rs  managed_window.rs  pointer.rs  protocols.rs  rendering.rs  state.rs  udev.rs  window_registry.rs
display-servers/smithay-display-server/src/drawing/: border.rs
display-servers/smithay-display-server/src/handlers/: display_action.rs  screencopy.rs  xdg.rs
display-servers/smithay-display-server/src/protocols/: screencopy.rs  xdg_output_manager.rs
display-servers/smithay-display-server/src/protocols/screencopy/: frame.rs
display-servers/smithay-display-server/src/udev/: devices.rs  rendering.rs
display-servers/smithay-display-server/src/udev/rendering/: render_elements.rs
display-servers/x11rb-display-server/: Cargo.toml
display-servers/x11rb-display-server/src/: error.rs  event_translate.rs  lib.rs  xatom.rs  xcursors.rs  xwrap.rs
display-servers/x11rb-display-server/src/event_translate/: client_message.rs  property_notify.rs
display-servers/x11rb-display-server/src/xwrap/: getters.rs  mouse.rs  setters.rs  window.rs
display-servers/xlib-display-server/: Cargo.toml
display-servers/xlib-display-server/src/: event_translate.rs  event_translate_client_message.rs  event_translate_client_message.rs.orig  event_translate_property_notify.rs  lib.rs  xatom.rs  xcursor.rs  xwrap.rs
display-servers/xlib-display-server/src/xwrap/: getters.rs  mod.rs  mouse.rs  setters.rs  window.rs
examples/: README.md  config-with-comments.ron
examples/basic_eww/: down  template.liquid  theme.toml
examples/basic_lemonbar/: down  template.liquid  theme.toml
examples/basic_polybar/: down  template.liquid  theme.toml  up
examples/basic_xmobar/: down  up
leftway-watchdog/: Cargo.toml
leftway-watchdog/src/: main.rs
leftwm/: Cargo.toml  build.rs
leftwm-core/: Cargo.toml
leftwm-core/src/: command.rs  config.rs  display_action.rs  display_event.rs  display_servers.rs  errors.rs  event_loop.rs  handlers.rs  layouts.rs  lib.rs  logging.rs  models.rs  state.rs  utils.rs
leftwm-core/src/config/: insert_behavior.rs  mod.rs  scratchpad.rs  window_hiding_strategy.rs  workspace_config.rs
leftwm-core/src/display_servers/: mock_display_server.rs  mod.rs
leftwm-core/src/display_servers/xlib_display_server/: event_translate.rs  event_translate_client_message.rs  event_translate_property_notify.rs  mod.rs  xatom.rs  xcursor.rs
leftwm-core/src/display_servers/xlib_display_server/xwrap/: getters.rs  keyboard.rs  mod.rs  mouse.rs  setters.rs  window.rs
leftwm-core/src/handlers/: command_handler.rs  display_event_handler.rs  focus_handler.rs  goto_tag_handler.rs  mod.rs  mouse_combo_handler.rs  screen_create_handler.rs  window_handler.rs  window_move_handler.rs  window_resize_handler.rs
leftwm-core/src/handlers/command_handler/: mod.rs  scratchpad_handler.rs
leftwm-core/src/layouts/: center_main.rs  center_main_balanced.rs  center_main_fluid.rs  even_horizontal.rs  even_vertical.rs  fibonacci.rs  grid_horizontal.rs  king.rs  layout_manager.rs  layout_mode.rs  left_main.rs  main_and_deck.rs  main_and_horizontal_stack.rs  main_and_vert_stack.rs  mod.rs  monocle.rs  new_layout_manager.rs  right_main_and_vert_stack.rs
leftwm-core/src/models/: dock_area.rs  dto.rs  focus_manager.rs  gutter.rs  layout_manager.rs  manager.rs  margins.rs  mod.rs  mode.rs  scratchpad.rs  screen.rs  size.rs  tag.rs  window.rs  window_change.rs  window_state.rs  window_type.rs  workspace.rs  xyhw.rs  xyhw_change.rs
leftwm-core/src/utils/: child_process.rs  command_pipe.rs  command_pipe_BACKUP_9625.rs  command_pipe_LOCAL_9723.rs  helpers.rs  mod.rs  modmask_lookup.rs  return_pipe.rs  state_socket.rs  window_updater.rs
leftwm-macros/: Cargo.toml  README.md
leftwm-macros/src/: lib.rs
leftwm-watchdog/: Cargo.toml
leftwm-watchdog/src/: main.rs  utils.rs
leftwm/doc/: leftwm.1  leftwm.md
leftwm/release/: PKGBUILD  git-PKGBUILD
leftwm/src/: ]  command.rs  config.rs  lib.rs  logging.rs  theme_config.rs  theme_setting.rs  utils.rs
leftwm/src/config/: checks.rs  default.rs  keybind.rs  mod.rs
leftwm/src/utils/: cacher.rs  file_handler.rs  log.rs  logger.rs  mod.rs
leftwm/src/utils/log/: file.rs  journald.rs  mod.rs  sys.rs
nixos-vm/: configuration.nix  vm.sh
patches/: 587.patch
src/: bin.rs  command.rs  command_builder.rs  config.rs  display_action.rs  display_event.rs  display_event_handler.rs  errors.rs  event_handler.rs  event_loop.rs  event_queue.rs  lib.rs  manager.old.rs  manager.rs  state.rs  wm.rs
src/config/: config_structs.rs  keybind.rs  loader.rs  mod.rs  scratchpad.rs  task.rs  theme_setting.rs  workspace_config.rs
src/display_servers/: display_server_mode.rs  event_handler.rs  mock_display_server.rs  mod.rs
src/handlers/: command_handler.rs  display_event_handler.rs  external_command_handler.rs  focus_handler.rs  goto_tag_handler.rs  mod.rs  mouse_combo_handler.rs  screen_create_handler.rs  window_handler.rs  window_move_handler.rs  window_resize_handler.rs
src/layouts/: center_main.rs  center_main_balanced.rs  even_horizontal.rs  even_vertical.rs  fibonacci.rs  grid_horizontal.rs  left_wider_right_stack.rs  main_and_deck.rs  mod.rs  (+5 more)
themes/: README.md
(+109 files in other folders)
