[workspace]
members = [
    "leftwm",
    "leftwm-core",
    "leftwm-macros",
    "display-servers/xlib-display-server",
    "display-servers/x11rb-display-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83.0" # MSRV MINIMUM SUPPORTED RUST VERSION

[profile.optimized]
inherits = "release"
codegen-units = 1
strip = "symbols"
lto = "fat"
