[workspace]
members = [
    "leftwm",
    "leftwm-core",
    "leftwm-macros",
    "leftway-watchdog",
    "display-servers/xlib-display-server",
    "display-servers/x11rb-display-server",
    "display-servers/smithay-display-server",
]
default-members = [
    "leftwm",
    "leftwm-core",
    "leftwm-macros",
    "leftway-watchdog",
    "display-servers/xlib-display-server",
    "display-servers/x11rb-display-server",
    "display-servers/smithay-display-server",
]

resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0" # MSRV MINIMUM SUPPORTED RUST VERSION

[profile.optimized]
inherits = "release"
codegen-units = 1
strip = "symbols"
lto = "fat"
