[package]
name = "leftwm-core"
version = "0.5.0"
rust-version = "1.70.0"
authors = ["Lex Childs <lexchilds@gmail.com>"]
categories = ["window manager"]
edition = "2021"
keywords = ["wm", "window", "manager"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leftwm/leftwm"
description = "A window manager for Adventurers"

[dependencies]
dirs-next = "2.0.0"
futures = "0.3.21"
tracing = "0.1.37"
mio = { version = "0.8.0", features = ["os-ext"] }
nix = {version = "0.27.1", features = ["fs", "signal"]}
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.44"
signal-hook = "0.3.4"
thiserror = "1.0.30"
tokio = { version = "1.2.0", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
leftwm-layouts = "0.8.4"
xdg = "2.2.0"
bitflags = "2.4.2"

[dev-dependencies]
tempfile = "3.2.0"

[features]
# Sleep on restart
slow-dm-fix = []
