[package]
name = "leftwm-core"
version = "0.5.4"
rust-version = "1.88.0" # MSRV MINIMUM SUPPORTED RUST VERSION
authors = ["Lex Childs <lexchilds@gmail.com>"]
categories = ["data-structures", "gui"]
edition = "2024"
keywords = ["wm", "window", "manager"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leftwm/leftwm"
description = "A window manager for Adventurers"

[dependencies]
dirs = { version = "6.0.0", default-features = false }
futures = { version = "0.3.21", default-features = false }
tracing = { version = "0.1.37", default-features = false }
nix = { version = "0.31.1", features = ["fs", "signal"], default-features = false }
serde = { version = "1.0.104", features = ["derive", "rc", "std"], default-features = false }
serde_json = { version = "1.0.44", features = ["std"], default-features = false }
signal-hook = { version = "0.4.1", default-features = false }
thiserror = { version = "2.0.9", default-features = false }
tokio = { version = "1.43.1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
], default-features = false }
leftwm-layouts = { version = "0.9.1" }
xdg = { version = "3.0.0", default-features = false }
bitflags = { version = "2.4.2", default-features = false }


[dev-dependencies]
tempfile = {version = "3.2.0", default-features=false}

[features]
# Sleep on restart
slow-dm-fix = []
