[package]
name = "leftwm-watchdog"
version = "0.5.4"
rust-version = "1.83.0" # MSRV MINIMUM SUPPORTED RUST VERSION
authors = ["Lex Childs <lexchilds@gmail.com>"]
categories = ["gui"]
edition = "2021"
keywords = ["wm", "window", "manager"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leftwm/leftwm"
description = "A window manager for Adventurers"

[dependencies]
clap = { version = "4.0.0", features = ["cargo"] }
dirs-next = "2.0.0"
nix = { version = "0.29.0", features = ["fs", "signal"] }
signal-hook = "0.3.4"
thiserror = "2.0.9"
xdg = "2.2.0"

[dev-dependencies]
tempfile = "3.2.0"

[features]
default = ["lefthk"]
lefthk = []

# Sleep on restart
slow-dm-fix = []

[[bin]]
name = "leftwm"
path = "src/main.rs"
