[package]
name = "leftwm"
version = "0.5.4"
rust-version = "1.88.0" # MSRV MINIMUM SUPPORTED RUST VERSION
authors = ["Lex Childs <lexchilds@gmail.com>"]
categories = ["gui"]
edition = "2024"
keywords = ["wm", "window", "manager"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leftwm/leftwm"
description = "A window manager for Adventurers"

[[bin]]
name = "lefthk-worker"
required-features = ["lefthk"]

[[bin]]
name = "leftwm"
required-features = ["leftwm-watchdog"]

[dependencies]
anyhow = { version = "1.0.48", default-features = false }
clap = { version = "4.5.0", features = ["cargo", "std", "help"], default-features = false }
git-version = { version = "0.3.5", default-features = false }
lefthk-core = { version = '0.3', optional = true }
leftwm-core = { path = "../leftwm-core", version = '0.5.4'}
leftwm-macros = { path = "../leftwm-macros", version = '0.5.4' }
leftwm-layouts = { version = "0.9.1" }
liquid = { version = "0.26.9", features = ["stdlib"], default-features = false }
nix = { version = "0.31.1", features = ["fs", "signal"], default-features = false }
regex = { version = "1", features = ["perf"], default-features = false }
ron = { version = "0.12.0", default-features = false }
serde = { version = "1.0.104", features = ["derive", "rc"], default-features = false }
serde_json = { version = "1.0.44", default-features = false }
shellexpand = { version = "3.0.0", features = ["base-0", "full"], default-features = false }
thiserror = { version = "2.0.9", default-features = false }
tokio = { version = "1.43.1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
], default-features = false }
xdg = { version = "3.0.0", default-features = false }

# logging
tracing = { version = "0.1.36", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"], default-features = false }
tracing-journald = { version = "0.3.0", optional = true, default-features = false }
tracing-appender = { version = "0.2.2", optional = true, default-features = false }
syslog-tracing = { version = "0.3.0", optional = true, default-features = false }

# display_servers
xlib-display-server = { path = "../display-servers/xlib-display-server", version = "0.1.4", optional = true}
x11rb-display-server = { path = "../display-servers/x11rb-display-server", version = "0.1.4", optional = true}

[dev-dependencies]
tempfile = {version = "3.2.0", default-features=false}

[features]
default = ["journald-log", "lefthk", "xlib", "x11rb", "leftwm-watchdog"]
lefthk = ["dep:lefthk-core"]

# backends
x11rb = ['dep:x11rb-display-server']
xlib = ['dep:xlib-display-server']

# logging features
journald-log = ["dep:tracing-journald"]
file-log = ["dep:tracing-appender"]
sys-log = ["dep:syslog-tracing"]

# Sleep on restart
slow-dm-fix = []

# Whether to include `leftwm` binary
leftwm-watchdog = []
