[package]
name = "x11rb-display-server"
description = "x11 backend for leftwm using pure rust + xcb specification"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leftwm-core = { path = "../../leftwm-core", version = '0.5.0' }
futures = "0.3.21"
tracing = "0.1.36"
tokio = { version = "1.2.0", features = [ "sync", "time" ] }
mio = { version = "0.8.0", features = ["os-ext"] }
# x11rb = { version = "0.12.0", features = ["cursor", "randr", "xinerama"] }
# x11rb = { git = "https://github.com/Syudagye/x11rb", features = ["cursor", "randr", "xinerama"] }
x11rb = { git = "https://github.com/psychon/x11rb", features = ["cursor", "randr", "xinerama"] }
serde = { version = "1.0.104", features = ["derive"] }
