[package]
name = "x11rb-display-server"
description = "x11 backend for leftwm using pure rust + xcb specification"
version = "0.1.4"
license = "MIT"
edition = "2024"
rust-version = "1.88.0" # MSRV MINIMUM SUPPORTED RUST VERSION

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leftwm-core = { path = "../../leftwm-core", version = '0.5.4' }
futures = { version = "0.3.21", default-features = false }
tracing = { version = "0.1.36", default-features = false }
tokio = { version = "1.43.1", features = [ "sync", "time" ], default-features = false }
mio = { version = "1.0.2", features = ["os-ext"], default-features = false }
x11rb = { version = "0.13.1", features = ["cursor", "randr", "xinerama"], default-features=false}
serde = { version = "1.0.104", features = ["derive", "std"], default-features = false }
