[package]
name = "xlib-display-server"
version = "0.1.2"
description = "A display server library for LeftWM" 
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leftwm-core = { path = "../../leftwm-core", version = '0.5.0' }
x11-dl = "2.18.4"
futures = "0.3.21"
tracing = "0.1.36"
tokio = { version = "1.2.0", features = [ "sync", "time" ] }
mio = { version = "0.8.0", features = ["os-ext"] }
serde = { version = "1.0.104", features = ["derive"] }
