[package]
name = "xlib-display-server"
version = "0.1.5"
description = "A display server library for LeftWM" 
license = "MIT"
edition = "2024"
rust-version = "1.88.0" # MSRV MINIMUM SUPPORTED RUST VERSION

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leftwm-core = { path = "../../leftwm-core", version = '0.5.4' }
x11-dl = { version = "2.18.4", default-features = false }
futures = { version = "0.3.21", default-features = false }
tracing = { version = "0.1.36", default-features = false }
mio = { version = "1.0.2", features = ["os-ext"], default-features = false }
tokio = { version = "1.43.1", features = ["sync", "time"], default-features = false }
serde = { version = "1.0.104", features = ["derive", "std"], default-features = false }

